# aivi

./: .gitignore  AGENTS.md  AIVI_LANGUAGE.md  AIVI_RFC.md  AIVI_STDLIB_MISSING_FEATURES_MAILFOX.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  Cargo.toml  INCREMENTAL_LSP_ANALYSIS.md  LICENCE.md  Mailfox.md  PHASE3_IMPLEMENTATION_MAP.md  PHASE4_ARCHITECTURE_DIAGRAM.txt  PHASE4_QUICK_REFERENCE.txt  PHASE4_REACTIVE_IMPLEMENTATION_MAP.md  PHASE4_README.md  README.md  SPEC_AUDIT_REPORT.md  STDLIB_AUDIT_P0.md  STDLIB_AUDIT_SUMMARY.md  aivi.md  aivi_db_live.md  choices_made.md  discrepancies.md  findings.md  gaps.md  guide.md  install-vscode.sh  install.sh  opencode.json  output.txt  package.json  plan.md  pnpm-lock.yaml  progress.md  rename_snippets.py  skills-lock.json  suggested_changes.md  syntax.md  (+5 more)
crates/aivi/: Cargo.toml  build.rs
crates/aivi-backend/: Cargo.toml  README.md
crates/aivi-backend/src/: cache.rs  codegen.rs  engine.rs  gc.rs  ids.rs  jit.rs  kernel.rs  layout.rs  lib.rs  lower.rs  numeric.rs  program.rs  runtime.rs  validate.rs
crates/aivi-backend/tests/: execution_engine.rs  foundations.rs
crates/aivi-lambda/: Cargo.toml  README.md
crates/aivi-lambda/src/: analysis.rs  ids.rs  lib.rs  lower.rs  module.rs  validate.rs
crates/aivi-lambda/tests/: foundations.rs  snapshots.rs
crates/aivi/src/: builtin_names.rs  diagnostics.rs  formatter.rs  hir.rs  i18n.rs  i18n_codegen.rs  intern.rs  kernel.rs  lexer.rs  lib.rs  main.rs  mcp.rs  native_rust_backend.rs  pm.rs  raw_text_sigil.rs  resolver.rs  runtime.rs  rust_codegen.rs  rust_ir.rs  rustc_backend.rs  stdlib.rs  surface.rs  syntax.rs  typecheck.rs  wasm.rs  workspace.rs
crates/aivi/tests/: classes_and_syntax.rs  cli_test_mode.rs  compile_fail_runner.rs  concurrency_runtime.rs  cranelift_jit.rs  debug_lex.rs  debug_parse.rs  debug_pipeline.rs  effect_block_let.rs  eval_order.rs  examples_build.rs  examples_parse.rs  flow_parser.rs  flow_runtime.rs  fmt_complex_goldens.rs  fmt_test.rs  format_parse_format.rs  formatter_examples_idempotent.rs  golden_harness.rs  i18n_sigils.rs  if_newlines.rs  insta_compiler_snapshots.rs  ir_dump_json.rs  lex_parse_edge_cases.rs  linalg_runtime.rs  mcp_manifest.rs  native_codegen.rs  native_codegen_examples.rs  native_fixture.rs  native_i18n_sigils.rs  native_index_paths.rs  network_stdlib_coverage.rs  no_dup_eval.rs  number_runtime.rs  number_stdlib.rs  numeric_boundaries.rs  parse_golden.rs  parser_error_recovery.rs  parser_property_tests.rs  pipe_test.rs  (+28 more)
crates/aivi_core/: Cargo.toml
crates/aivi_core/src/: cg_type.rs  lib.rs
crates/aivi_gtk4/: Cargo.toml
crates/aivi_gtk4/src/: lib.rs
crates/aivi_http_server/: Cargo.toml
crates/aivi_http_server/src/: lib.rs
crates/aivi_lsp/: Cargo.toml  README.md  build.rs
crates/aivi_lsp/src/: backend.rs  completion.rs  diagnostics.rs  doc_index.rs  document_symbols.rs  folding.rs  gtk_index.rs  inlay_hints.rs  lib.rs  main.rs  navigation.rs  repro_lsp.rs  selection.rs  semantic_tokens.rs  server.rs  signature.rs  state.rs  strict.rs  tests.rs  workspace.rs  workspace_symbols.rs
crates/aivi_mcp/: Cargo.toml
crates/aivi_mcp/src/: lib.rs
crates/aivi_native_runtime/: Cargo.toml  README.md
crates/aivi_native_runtime/src/: abi.rs  builtins.rs  lib.rs  values.rs
crates/aivi_native_runtime/tests/: builtins_test.rs  values_test.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/decoder_paths/: fixtures__frontend__milestone-2__invalid__source-duplicate-option__main.aivi  fixtures__frontend__milestone-2__valid__source-option-contract-parameter-context-free-builtins__main.aivi  fixtures__frontend__milestone-2__valid__source-provider-contract-declarations__main.aivi
fuzz/corpus/formatter/: seed_effect.aivi  seed_nested.aivi  seed_simple.aivi
fuzz/corpus/frontend/: seed_case_record.aivi  seed_effect.aivi
fuzz/corpus/lsp_pipeline/: seed_effect.aivi  seed_invalid_diag.aivi  seed_kitchen.aivi  seed_pattern.aivi
fuzz/corpus/parser/: seed_domains.aivi  seed_hello.aivi  seed_match.aivi  seed_records.aivi  seed_types.aivi
fuzz/corpus/parser_lossless/: fixtures__frontend__milestone-1__valid__formatting__domain_layout.aivi  fixtures__frontend__milestone-1__valid__formatting__pipe_alignment.aivi  fixtures__frontend__milestone-1__valid__literals__domain_literal_suffixes.aivi  fixtures__frontend__milestone-1__valid__top-level__domains.aivi  fixtures__frontend__milestone-2__invalid__ambiguous-domain-literal-suffix__main.aivi  fixtures__frontend__milestone-2__invalid__ambiguous-domain-member__main.aivi  fixtures__frontend__milestone-2__invalid__case-branch-type-mismatch__main.aivi  fixtures__frontend__milestone-2__invalid__domain-recursive-carrier__main.aivi  fixtures__frontend__milestone-2__invalid__duplicate-instance__main.aivi  fixtures__frontend__milestone-2__invalid__fanin-without-map__main.aivi  fixtures__frontend__milestone-2__invalid__misplaced-control-branches__main.aivi  fixtures__frontend__milestone-2__invalid__source-decorator-non-signal__main.aivi  fixtures__frontend__milestone-2__invalid__source-provider-without-variant__main.aivi  fixtures__frontend__milestone-2__valid__builtin-constructor-inference__main.aivi  fixtures__frontend__milestone-2__valid__domain-declarations__main.aivi  fixtures__frontend__milestone-2__valid__domain-literal-suffixes__main.aivi  fixtures__frontend__milestone-2__valid__domain-member-resolution__main.aivi  fixtures__frontend__milestone-2__valid__domain-operator-usage-parameterized__main.aivi  fixtures__frontend__milestone-2__valid__domain-operator-usage__main.aivi  fixtures__frontend__milestone-2__valid__instance-declarations__main.aivi  fixtures__frontend__milestone-2__valid__pipe-branch-and-join__main.aivi  fixtures__frontend__milestone-2__valid__pipe-truthy-falsy-signal-carriers__main.aivi  fixtures__frontend__milestone-2__valid__type-kinds__main.aivi
fuzz/corpus/runtime/: seed_effect_bindings.aivi  (+1 more)
fuzz/fuzz_targets/: decoder_paths.rs  formatter.rs  frontend.rs  lsp_pipeline.rs  native_codegen.rs  parser.rs  parser_lossless.rs  runtime.rs  type_inference.rs
fuzz/src/: lib.rs
(+3701 files in other folders)
