[workspace]
members = [
    "crates/aivi",
    "crates/aivi_core",
    "crates/aivi_driver",
    "crates/aivi_http_server",
    "crates/aivi_lsp",
    "crates/doc_index_gen",
    "fuzz",
]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.fuzz]
inherits = "dev"
opt-level = 1
debug = true
overflow-checks = false
