[workspace]
members = [
    "crates/aivi",
    "crates/aivi_core",
    "crates/aivi_database",
    "crates/aivi_driver",
    "crates/aivi_email",
    "crates/aivi_gtk4",
    "crates/aivi_http_server",
    "crates/aivi_lsp",
    "crates/doc_index_gen",
    "fuzz",
]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.fuzz]
inherits = "dev"
opt-level = 1
debug = true
overflow-checks = false

[profile.test]
#
# Work around a rust-lld hidden-symbol linker regression in test builds that
# shows up with optimized test profiles on Linux.
opt-level = 0
