[package]
name = "aivi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# Fuzz the public toolchain surface area.
aivi = { path = "../crates/aivi" }

[profile.release]
debug = 1

# ── Fuzz targets ──────────────────────────────────────────────

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
doc = false

[[bin]]
name = "frontend"
path = "fuzz_targets/frontend.rs"
doc = false

[[bin]]
name = "runtime"
path = "fuzz_targets/runtime.rs"
doc = false

[[bin]]
name = "formatter"
path = "fuzz_targets/formatter.rs"
doc = false

[[bin]]
name = "lsp_pipeline"
path = "fuzz_targets/lsp_pipeline.rs"
doc = false

