[package]
name = "aivi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
bolero = "0.13"

# Fuzz the public toolchain surface area.
aivi = { path = "../crates/aivi" }

# ── Fuzz targets ──────────────────────────────────────────────

[[test]]
name = "parser"
path = "fuzz_targets/parser.rs"

[[test]]
name = "frontend"
path = "fuzz_targets/frontend.rs"

[[test]]
name = "runtime"
path = "fuzz_targets/runtime.rs"

[[test]]
name = "formatter"
path = "fuzz_targets/formatter.rs"

[[test]]
name = "lsp_pipeline"
path = "fuzz_targets/lsp_pipeline.rs"

[[test]]
name = "type_inference"
path = "fuzz_targets/type_inference.rs"
