[package]
name = "aivi-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-core = { path = "../aivi-core" }
aivi-hir.workspace = true
aivi-typing.workspace = true

[dev-dependencies]
aivi-syntax.workspace = true

[lints]
workspace = true
