[package]
name = "aivi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
im = "15.1.0"
palette = "0.7.5"
ordered-float = "5.1.0"
regex = "1.10.6"
rust_decimal = "1.36.0"
rustfft = "6.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "2.0.18"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.11.0"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
parking_lot = "0.12"
