[package]
name = "aivi_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.44"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
im = "15.1.0"
palette = "0.7.6"
ordered-float = "5.1.0"
regex = "1.12.3"
rust_decimal = "1.40.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.4.0"
sha2 = "0.10.9"
thiserror = "2.0.18"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4"] }
parking_lot = "0.12"
rayon = "1.11.0"
