[package]
name = "aivi_gtk4"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
image = { version = "0.25.9", default-features = false, features = ["png"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
zbus = "5.14.0"
