[package]
name = "aivi_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
futures-util = "0.3.30"
hyper = { version = "0.14.30", features = ["server", "http1", "http2"] }
hyper-tungstenite = "0.12.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-tungstenite = "0.18.0"
