[package]
name = "aivi_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-tungstenite = "0.19.0"
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-tungstenite = "0.28.0"
