[package]
name = "aivi-lsp"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
aivi = { package = "aivi_core", path = "../aivi_core" }
tokio = { version = "1.37.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
