[package]
name = "aivi-lsp"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
aivi = { package = "aivi_core", path = "../aivi_core" }
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "rt-multi-thread", "time"] }
tower-lsp = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
