[package]
name = "aivi_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
aivi_core = { path = "../aivi_core" }
aivi_driver = { path = "../aivi_driver" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4"] }
include_dir = "0.7.4"
