[package]
name = "aivi_native_runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
gtk4-libadwaita = []

[dependencies]
chrono = "0.4.44"
getrandom = "0.4.1"
im = "15.1.0"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
ordered-float = "5.1.0"
palette = "0.7.6"
regex = "1.12.3"
rust_decimal = "1.40.0"
rustfft = "6.4.1"
sha2 = "0.10.9"
serde_json = "1.0.149"
csv = "1.4.0"
image = { version = "0.25.9", default-features = true }
imap = "3.0.0-alpha.15"
mailparse = "0.16.1"
tokio = { version = "1.49.0", features = ["rt", "sync"] }
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
url = "2.5.8"
ureq = "3.2.0"
uuid = { version = "1.21.0", features = ["v4"] }
thiserror = "2.0.18"

aivi_http_server = { path = "../aivi_http_server" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
postgres = "0.19.12"
mysql = "27.0.0"
